--- a/index.html
+++ b/index.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Infinity Loop</title>
+    <link rel="stylesheet" href="./assets/css/reset.css">
+<link rel="stylesheet" href="./assets/css/style.css">
+</head>
+<body>
+  <header>
+    <h1>Solve the Puzzle</h1>
+    <h2 class="levelText"></h1>
+  </header>
 
-  </body>
+<div class="container">
+</div>
+<div class="instruction">
+  <h2></h2>
+  <p></p>
+</div>
+<div class="buttonDiv"></div>
+<footer>
+  <p>&copy;John Ang 2017 Infinity Loop Clone</p>
+</footer>
+<script src="https://code.jquery.com/jquery-3.1.1.min.js" charset="utf-8"></script>
+  <script src="./assets/js/core.js"></script>
+</body>
 </html>
