revised index page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Infinity Loop</title>
+    <title>Infinity Loop Clone</title>
     <link rel="stylesheet" href="./assets/css/reset.css">
 <link rel="stylesheet" href="./assets/css/style.css">
 </head>
@@ -21,6 +21,7 @@
 <div class="buttonDiv"></div>
 <footer>
   <p>&copy;John Ang 2017 Infinity Loop Clone</p>
+  <p>Inspired by <a href="https://play.google.com/store/apps/details?id=com.balysv.loop&hl=en" target="_blank">Infinity Loop</a> game</p>
 </footer>
 <script src="https://code.jquery.com/jquery-3.1.1.min.js" charset="utf-8"></script>
   <script src="./assets/js/core.js"></script>
