--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Infinity Loop Clone</title>
-    <link rel="stylesheet" href="./assets/css/reset.css">
-<link rel="stylesheet" href="./assets/css/style.css">
+  <meta charset="UTF-8">
+  <title>Infinity Loop Clone</title>
+  <link rel="stylesheet" href="./assets/css/reset.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
   <header>
-    <h1>Solve the Puzzle</h1>
+    <h1>Infinity Loop Clone Game</h1>
     <h2 class="levelText"></h1>
   </header>
 
@@ -16,14 +18,15 @@
 </div>
 <div class="instruction">
   <h2></h2>
-  <p></p>
-</div>
-<div class="buttonDiv"></div>
-<footer>
-  <p>&copy;John Ang 2017 Infinity Loop Clone</p>
-  <p>Inspired by <a href="https://play.google.com/store/apps/details?id=com.balysv.loop&hl=en" target="_blank">Infinity Loop</a> game</p>
-</footer>
-<script src="https://code.jquery.com/jquery-3.1.1.min.js" charset="utf-8"></script>
-  <script src="./assets/js/core.js"></script>
+    <p></p>
+    </div>
+    <div class="buttonDiv"></div>
+    <footer>
+      <p>&copy;John Ang 2017 Infinity Loop Clone</p>
+      <p>Inspired by <a href="https://play.google.com/store/apps/details?id=com.balysv.loop&hl=en" target="_blank">Infinity Loop</a> game</p>
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" charset="utf-8"></script>
+    <script src="./assets/js/core.js"></script>
 </body>
+
 </html>
